data/derived/sp14/progs/unify/prog3646.ml.out
Characters 115-139:
  else if List.length l1 < List.length l2 then (List.append [0] l1, l2);;
                                               ^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type unit
